<resources>
    <!-- UI strings -->
    <string name="app_name">Snow Day</string>
    <string name="label">Label</string>
    <string-array name="district_array">
        <item>Choose your district</item>
        <item>ASD-South</item>
        <item>ASD-West</item>
        <item>Others to be added</item>
    </string-array>
    <string-array name="interval_array">
        <item>Select the refresh interval</item>
        <item>Never</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>60 minutes</item>
    </string-array>
    <!-- Services -->
    <string name="service_label">Snowday background tweet gatherer</string>
    <string name="service_description">Insert description here</string>
    <string name="service_process">Pull Tweets Process</string>
    <!-- Notifications -->
    <string name="service_notification_title">Background service running</string>
    <string name="service_notification_body">Tweet gathering service currently running. Touch to manage settings</string>
    <string name="service_notification_ticker">Starting background task</string>
    <string name="delay_notification_title">New Delay(s)</string>
    <string name="delay_notification_body">Click to view all delayed buses</string>
    <string name="delay_notification_ticker">New delayed bus(es)</string>
    <string name="closure_notification_title">New Closure(s)</string>
    <string name="closure_notification_body">Click to view all closures</string>
    <string name="closure_notification_ticker">New closure(s)</string>
    <!-- Activity titles-->
    <string name="title_closures">Current Closures</string>
    <string name="title_delays">Current Delays</string>
    <string name="title_settings">Settings</string>
    <!-- Buttons -->
    <string name="get_tweets_button">Gather tweets</string>
    <string name="view_delays_button">View Delays</string>
    <string name="view_closures_button">View Closures</string>
    <string name="clear_button">Clear</string>
    <string name="delete_all_button">Delete All</string>
    <string name="update_button">Update</string>
    <string name="reset_settings_button">Reset Settings</string>
    <string name="tweet_position_settings_button">Reset tweet position</string>
    <!-- Text fields -->
    <string name="background_service_text">Manage automatic tweet collection:</string>
    <string name="no_delays">No new delayed buses</string>
    <string name="no_closures">No new closures</string>
    <!-- Art credit -->
    <string name="credit_greyhound">Credit: Amy Dai</string>
    <!-- Twitter configuration -->
    <string name="twitter_consumer_key">rAp2FY0VG9TrfvITabX9T8pdl</string>
    <string name="twitter_consumer_secret">qChV4hOKetgzKKvqoHmUdvB5pF4uIOMIMctYfTY2uSvEbzskyy</string>
    <!-- Tweet retrieval -->
    <string name="action_settings">Settings</string>
    <string name="no_tweets">No new tweets</string>
    <string name="success">Tweets successfully gathered</string>
    <string name="error">Error while searching tweets</string>
    <string name="searching">Searching tweets…</string>
</resources>
