<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_information"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.sjhigh.snowday.Settings">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/bus_settings_editText"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/bus_settings_button"
        android:layout_alignBottom="@+id/bus_settings_button"
        android:textAlignment="viewStart"
        android:hint="@string/label" />

    <Button
        android:text="@string/update_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/bus_settings_button" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/bus_settings_editText"
        android:layout_alignParentStart="true"
        android:id="@+id/pickup_settings_editText"
        android:layout_toStartOf="@+id/bus_settings_button"
        android:layout_alignBottom="@+id/pickup_settings_button"
        android:hint="@string/label" />

    <Button
        android:text="@string/update_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bus_settings_editText"
        android:layout_alignParentEnd="true"
        android:id="@+id/pickup_settings_button" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/district_settings_spinner"
        android:entries="@array/district_array"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/district_settings_spinner"
        android:layout_centerHorizontal="true"
        android:id="@+id/interval_settings_spinner"
        android:entries="@array/interval_array" />

    <Button
        android:text="@string/reset_settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/default_settings_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/backgroundService_settings_toggleButton"
        android:layout_above="@+id/default_settings_button"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/backgroundService_settings_textView"
        android:text="@string/background_service_text"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_above="@+id/default_settings_button"
        android:layout_marginBottom="45dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
